--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,25 @@
 [package]
 name = "seedtool-cli"
-version = "0.1.7"
+version = "0.1.8"
 edition = "2021"
 description = "A command-line tool for generating and transforming cryptographic seeds."
 authors = ["Blockchain Commons"]
-keywords = ["crypto", "random", "seed", "mnemonic", "bitcoin"]
 repository = "https://github.com/BlockchainCommons/seedtool-cli-rust"
 readme = "README.md"
 license = "BSD-2-Clause-Patent"
-categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
 documentation = "https://docs.rs/seedtool-cli"
+keywords = ["crypto", "random", "seed", "mnemonic", "bitcoin"] # Up to five
+categories = ["cryptography::cryptocurrencies", "command-line-utilities"] # https://crates.io/category_slugs
 
 [[bin]]
 name = "seedtool"
 path = "src/main.rs"
 
 [dependencies]
-dcbor = "^0.15.0"
-bc-ur = "^0.5.0"
-bc-envelope = "^0.18.2"
-bc-components = "^0.13.0"
+dcbor = "^0.16.0"
+bc-ur = "^0.6.0"
+bc-envelope = "^0.19.0"
+bc-components = "^0.14.0"
 bc-rand = "^0.2.0"
 bc-crypto = "^0.5.0"
 sskr = "^0.4.0"
